tenants/triage-analysis-sast/agent-triage-sast/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agent-triage-sast
spec:
  to:
    kind: Service
    name: agent-triage-sast
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
